--- a/README
+++ b/README
@@ -13,16 +13,17 @@ http://edoxy.net/
 
 ---- License -----------------------------------------------------------------
 
-This file is part of Turbmat-Tools.
+This file is part of Smarty Memcached.
 
-Turbmat-Tools is free software: you can redistribute it and/or modify it under
-the terms of the GNU General Public License as published by the Free Software
-Foundation, either version 3 of the License, or (at your option) any later
-version.
+Smarty Memcached is free software: you can redistribute it and/or modify it
+under the terms of the GNU General Public License as published by the Free
+Software Foundation, either version 3 of the License, or (at your option) any
+later version.
 
-Turbmat-Tools is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+Smarty Memcached is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+details.
 
 You should have received a copy of the GNU General Public License along with
 Turbmat. If not, see <http://www.gnu.org/licenses/>.
